# vision-language-models-playground

./: .gitignore  LICENSE  README.md  vision_services_response_format.md
OpenAI-client/: Readme.md
OpenAI-client/cpp/: CMakeLists.txt  Readme.md  main.cpp
OpenAI-client/python/: Readme.md
OpenAI-completion-client/cpp/: CMakeLists.txt  Readme.md  main.cpp
OpenAI-completion-client/python/: Readme.md  main.py
google/: Readme.md  gemini-api.py  vertex-ai.py
llama/: Readme.md  utils.py
